// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace SnippetManager.Models;

public partial class Category
{
    public int CategoryId { get; set; }

    public string Name { get; set; }

    public string Type { get; set; }

    public virtual ICollection<Snippet> Snippets { get; set; } = new List<Snippet>();
}