@startuml

entity Users {
  +UserId: int <<PK>>
  --
  Username: string
  Email: string
  PasswordHash: string
  CreatedAt: datetime
  UpdatedAt: datetime
}

entity Snippets {
  +SnippetId: int <<PK>>
  --
  UserId: int <<FK>>
  Title: string
  Description: string
  Language: string
  Tags: string <<nullable>>
  Content: text
  CreatedAt: datetime
  UpdatedAt: datetime
}

entity Categories {
  +CategoryId: int <<PK>>
  --
  Name: string
  Type: string
}

Users ||--o{ Snippets : owns
Categories ||--o{ Snippets : categorizes

@enduml